--- a/frontend/src/styles/container_upload.css
+++ b/frontend/src/styles/container_upload.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  color: #ffaa00;
+  color: #fac73c;
   font-size: 1rem;
 }
 
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  color: #ffaa00;
+  color: #fac73c;
   font-size: 1rem;
 }
 
@@ -19,7 +19,7 @@
   width: 16px;
   height: 16px;
   border: 3px solid #ffd70055;
-  border-top: 3px solid #ffd700;
+  border-top: 3px solid #fac73c;
   border-radius: 50%;
   animation: spin 0.8s linear infinite;
 }
