englisch-deutsch (noch nicht ganz funktionsfähig)

--- a/frontend/src/layouts/navbar.html
+++ b/frontend/src/layouts/navbar.html
@@ -9,7 +9,11 @@
     <a href="/pages/dicom_upload.html">DICOM hochladen</a>
     <a href="/pages/profil.html">Profil</a>
   </div>
+  
   <div class="logout">
     <a href="/pages/login.html">Logout</a>
+  </div>
+  <div class="lang-toggle">
+    <button id="lang-toggle">EN</button>
   </div>
 </nav>
